feature - Gestión de autenticación de usuarios y seguridad